changed the summing of anime genres

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -177,64 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Counter({'Action': 1098,\n",
-       "         'Adventure': 932,\n",
-       "         'Drama': 697,\n",
-       "         'Fantasy': 765,\n",
-       "         'Magic': 353,\n",
-       "         'Military': 133,\n",
-       "         'Shounen': 712,\n",
-       "         'Comedy': 1870,\n",
-       "         'Historical': 275,\n",
-       "         'Parody': 126,\n",
-       "         'Samurai': 51,\n",
-       "         'Sci-Fi': 774,\n",
-       "         'Thriller': 34,\n",
-       "         'School': 567,\n",
-       "         'Sports': 240,\n",
-       "         'Super Power': 190,\n",
-       "         'Romance': 652,\n",
-       "         'Slice of Life': 562,\n",
-       "         'Supernatural': 431,\n",
-       "         'Mecha': 379,\n",
-       "         'Music': 123,\n",
-       "         'Mystery': 222,\n",
-       "         'Seinen': 235,\n",
-       "         'Space': 123,\n",
-       "         'Vampire': 46,\n",
-       "         'Shoujo': 283,\n",
-       "         'Horror': 113,\n",
-       "         'Police': 50,\n",
-       "         'Psychological': 89,\n",
-       "         'Ecchi': 245,\n",
-       "         'Josei': 32,\n",
-       "         'Game': 103,\n",
-       "         'Martial Arts': 95,\n",
-       "         'Demons': 89,\n",
-       "         'Harem': 175,\n",
-       "         'Dementia': 9,\n",
-       "         'Shounen Ai': 24,\n",
-       "         'Cars': 36,\n",
-       "         'Kids': 484,\n",
-       "         'Shoujo Ai': 31})"
-      ]
-     },
-     "execution_count": 161,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-163-43b6d1101401>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-163-43b6d1101401>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    sum(anime_df[anime_df[\"genre\"].isnull() == False][\"genre\"].str.split(\", \").apply(lambda x: Counter(x) if x.isnull == false), Counter())\u001b[0m\n\u001b[1;37m                                                                                                                              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "from collections import Counter\n",
     "\n",
     "\n",
-    "sum(anime_df[anime_df[\"genre\"].isnull() == False][\"genre\"].str.split(\", \").apply(Counter), Counter())\n"
+    "sum(anime_df[anime_df[\"genre\"].isnull() == False][\"genre\"].str.split(\", \").apply(lambda x: Counter(x) if x.isnull == false else ), Counter())\n"
    ]
   },
   {
