Added questions to answer during the eda

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis"
+    "# Exploratory Data Analysis\n",
+    "In this analysis, there are a few questions that I would like to explore using the data. These are:\n",
+    "- How are the numerical data distributed and are they any obvious correlations?\n",
+    "- What genres the most frequently made by anime studios?\n",
+    "- How do the genres an anime is labelled as affect the ratings of the anime?\n",
+    "- How many people rate an anime instead of only watching it? \n",
+    "- For users that do rate animes, ?"
    ]
   },
   {
