Commited proper version

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -10,7 +10,7 @@
     "- What genres the most frequently made by anime studios?\n",
     "- How do the genres an anime is labelled as affect the ratings of the anime?\n",
     "- How many people rate an anime instead of only watching it? \n",
-    "- For users that do rate animes, ?"
+    "- For users that do rate animes, what are their mean and median ratings they give out?"
    ]
   },
   {
