created function to get average ratings for each genre

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -7,7 +7,7 @@
     "# Exploratory Data Analysis\n",
     "In this analysis, there are a few questions that I would like to explore using the data. These are:\n",
     "- How are the numerical data distributed and are they any obvious correlations?\n",
-    "- What genres the most frequently made by anime studios?\n",
+    "- What genres are the most frequently made by anime studios?\n",
     "- How do the genres an anime is labelled as affect the ratings of the anime?\n",
     "- How many people rate an anime instead of only watching it? \n",
     "- For users that do rate animes, what are their mean and median ratings they give out?"
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
     "def count_genre_freq(df, column, delimiter=\", \"):\n",
     "    from collections import Counter\n",
     "    non_empty_rows = df[df[column].isnull() == False][column]\n",
-    "    row_counted = non_empty_rows.str.split(\", \").apply(Counter)\n",
+    "    row_counted = non_empty_rows.str.split(delimiter).apply(Counter)\n",
     "    total_freq = dict(sum(row_counted, Counter()))\n",
     "    freq_series = pd.Series(total_freq)\n",
     "    output = freq_series.sort_values(ascending=False)\n",
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems as though the 5 most frequent anime genres of the dataset are **Comedy, Action, Adventure, Sci-Fi, and Fantasy** while the genres with the lowest frequencies are **Thriller, Josei, Shoujo Ai, Shounen Ai, and Dementia**."
+    "It seems as though the 5 most frequent anime genres of the dataset are **Comedy, Action, Adventure, Sci-Fi, and Fantasy** while the genres with the lowest frequencies are **Thriller, Josei, Shoujo Ai, Shounen Ai, and Dementia**.\n",
+    "\n",
+    "Let's visualise the numbers in a graph."
    ]
   },
   {
@@ -578,6 +580,69 @@
     "plt.title(\"Number of Animes in Each Genre From myanimelist.net\", size=20)\n",
     "plt.tight_layout()\n",
     "sns.despine();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comedy: Mean 6.868, Median 6.920, Count 1828\n",
+      "\n",
+      "Action: Mean 7.107, Median 7.130, Count 1064\n",
+      "\n",
+      "Adventure: Mean 6.964, Median 6.950, Count 917\n",
+      "\n",
+      "Sci-Fi: Mean 6.981, Median 6.990, Count 757\n",
+      "\n",
+      "Fantasy: Mean 7.033, Median 7.065, Count 732\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_mean_median_rating(df, string):\n",
+    "    # Create new dataframe that contains only the rows where the genre contains the given string and the ratings are not null\n",
+    "    output_df = df[df[\"genre\"].str.contains(string, na=False) & ~np.isnan(df[\"rating\"])][\"rating\"]\n",
+    "    return output_df.mean(), output_df.median(), output_df.count()\n",
+    "    \n",
+    "top_5_genres = [\"Comedy\", \"Action\", \"Adventure\", \"Sci-Fi\", \"Fantasy\"]\n",
+    "for genre in top_5_genres:\n",
+    "    mean, median, count = find_mean_median_rating(anime_df, genre)\n",
+    "    print(f\"{genre}: Mean {mean:.3f}, Median {median:.3f}, Count {count}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thriller: Mean 7.886, Median 8.025, Count 34\n",
+      "\n",
+      "Josei: Mean 7.610, Median 7.600, Count 30\n",
+      "\n",
+      "Shoujo Ai: Mean 7.173, Median 7.185, Count 30\n",
+      "\n",
+      "Shounen Ai: Mean 7.192, Median 7.190, Count 23\n",
+      "\n",
+      "Dementia: Mean 7.207, Median 7.210, Count 7\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "bottom_5_genres = [\"Thriller\", \"Josei\", \"Shoujo Ai\", \"Shounen Ai\", \"Dementia\"]\n",
+    "for genre in bottom_5_genres:\n",
+    "    mean, median, count = find_mean_median_rating(anime_df, genre)\n",
+    "    print(f\"{genre}: Mean {mean:.3f}, Median {median:.3f}, Count {count}\\n\")"
    ]
   },
   {
