--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -19,8 +19,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# Suppress scientific notation of pandas\n",
-    "pd.set_option('display.float_format', lambda x: '%.0f' % x)"
+    "# Suppress scientific notation of pandas and round floats to 3dp\n",
+    "pd.options.display.float_format = '{:,.3f}'.format"
    ]
   },
   {
@@ -83,7 +83,7 @@
        "      <td>Drama, Romance, School, Supernatural</td>\n",
        "      <td>Movie</td>\n",
        "      <td>1</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.370</td>\n",
        "      <td>200630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -93,7 +93,7 @@
        "      <td>Action, Adventure, Drama, Fantasy, Magic, Mili...</td>\n",
        "      <td>TV</td>\n",
        "      <td>64</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.260</td>\n",
        "      <td>793665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -103,7 +103,7 @@
        "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
        "      <td>TV</td>\n",
        "      <td>51</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.250</td>\n",
        "      <td>114262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -113,7 +113,7 @@
        "      <td>Sci-Fi, Thriller</td>\n",
        "      <td>TV</td>\n",
        "      <td>24</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.170</td>\n",
        "      <td>673572</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -123,7 +123,7 @@
        "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
        "      <td>TV</td>\n",
        "      <td>51</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.160</td>\n",
        "      <td>151266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -133,7 +133,7 @@
        "      <td>Comedy, Drama, School, Shounen, Sports</td>\n",
        "      <td>TV</td>\n",
        "      <td>10</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.150</td>\n",
        "      <td>93351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -143,7 +143,7 @@
        "      <td>Action, Adventure, Shounen, Super Power</td>\n",
        "      <td>TV</td>\n",
        "      <td>148</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.130</td>\n",
        "      <td>425855</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -153,7 +153,7 @@
        "      <td>Drama, Military, Sci-Fi, Space</td>\n",
        "      <td>OVA</td>\n",
        "      <td>110</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.110</td>\n",
        "      <td>80679</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -163,7 +163,7 @@
        "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
        "      <td>Movie</td>\n",
        "      <td>1</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.100</td>\n",
        "      <td>72534</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -173,7 +173,7 @@
        "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
        "      <td>TV</td>\n",
        "      <td>13</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.110</td>\n",
        "      <td>81109</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -194,16 +194,16 @@
        "9     15417                           Gintama&#039;: Enchousen   \n",
        "\n",
        "                                               genre   type episodes  rating  \\\n",
-       "0               Drama, Romance, School, Supernatural  Movie        1       9   \n",
-       "1  Action, Adventure, Drama, Fantasy, Magic, Mili...     TV       64       9   \n",
-       "2  Action, Comedy, Historical, Parody, Samurai, S...     TV       51       9   \n",
-       "3                                   Sci-Fi, Thriller     TV       24       9   \n",
-       "4  Action, Comedy, Historical, Parody, Samurai, S...     TV       51       9   \n",
-       "5             Comedy, Drama, School, Shounen, Sports     TV       10       9   \n",
-       "6            Action, Adventure, Shounen, Super Power     TV      148       9   \n",
-       "7                     Drama, Military, Sci-Fi, Space    OVA      110       9   \n",
-       "8  Action, Comedy, Historical, Parody, Samurai, S...  Movie        1       9   \n",
-       "9  Action, Comedy, Historical, Parody, Samurai, S...     TV       13       9   \n",
+       "0               Drama, Romance, School, Supernatural  Movie        1   9.370   \n",
+       "1  Action, Adventure, Drama, Fantasy, Magic, Mili...     TV       64   9.260   \n",
+       "2  Action, Comedy, Historical, Parody, Samurai, S...     TV       51   9.250   \n",
+       "3                                   Sci-Fi, Thriller     TV       24   9.170   \n",
+       "4  Action, Comedy, Historical, Parody, Samurai, S...     TV       51   9.160   \n",
+       "5             Comedy, Drama, School, Shounen, Sports     TV       10   9.150   \n",
+       "6            Action, Adventure, Shounen, Super Power     TV      148   9.130   \n",
+       "7                     Drama, Military, Sci-Fi, Space    OVA      110   9.110   \n",
+       "8  Action, Comedy, Historical, Parody, Samurai, S...  Movie        1   9.100   \n",
+       "9  Action, Comedy, Historical, Parody, Samurai, S...     TV       13   9.110   \n",
        "\n",
        "   members  \n",
        "0   200630  \n",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -442,8 +442,8 @@
        "      <td>Fullmetal Alchemist: Brotherhood</td>\n",
        "      <td>Action, Adventure, Drama, Fantasy, Magic, Mili...</td>\n",
        "      <td>TV</td>\n",
-       "      <td>64</td>\n",
-       "      <td>9</td>\n",
+       "      <td>64.000</td>\n",
+       "      <td>9.260</td>\n",
        "      <td>793665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -452,8 +452,8 @@
        "      <td>Gintama°</td>\n",
        "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
        "      <td>TV</td>\n",
-       "      <td>51</td>\n",
-       "      <td>9</td>\n",
+       "      <td>51.000</td>\n",
+       "      <td>9.250</td>\n",
        "      <td>114262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -462,8 +462,8 @@
        "      <td>Steins;Gate</td>\n",
        "      <td>Sci-Fi, Thriller</td>\n",
        "      <td>TV</td>\n",
-       "      <td>24</td>\n",
-       "      <td>9</td>\n",
+       "      <td>24.000</td>\n",
+       "      <td>9.170</td>\n",
        "      <td>673572</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -472,8 +472,8 @@
        "      <td>Gintama&amp;#039;</td>\n",
        "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
        "      <td>TV</td>\n",
-       "      <td>51</td>\n",
-       "      <td>9</td>\n",
+       "      <td>51.000</td>\n",
+       "      <td>9.160</td>\n",
        "      <td>151266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -482,8 +482,8 @@
        "      <td>Haikyuu!!: Karasuno Koukou VS Shiratorizawa Ga...</td>\n",
        "      <td>Comedy, Drama, School, Shounen, Sports</td>\n",
        "      <td>TV</td>\n",
-       "      <td>10</td>\n",
-       "      <td>9</td>\n",
+       "      <td>10.000</td>\n",
+       "      <td>9.150</td>\n",
        "      <td>93351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -492,8 +492,8 @@
        "      <td>Hunter x Hunter (2011)</td>\n",
        "      <td>Action, Adventure, Shounen, Super Power</td>\n",
        "      <td>TV</td>\n",
-       "      <td>148</td>\n",
-       "      <td>9</td>\n",
+       "      <td>148.000</td>\n",
+       "      <td>9.130</td>\n",
        "      <td>425855</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -502,8 +502,8 @@
        "      <td>Gintama&amp;#039;: Enchousen</td>\n",
        "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
        "      <td>TV</td>\n",
-       "      <td>13</td>\n",
-       "      <td>9</td>\n",
+       "      <td>13.000</td>\n",
+       "      <td>9.110</td>\n",
        "      <td>81109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -512,8 +512,8 @@
        "      <td>Clannad: After Story</td>\n",
        "      <td>Drama, Fantasy, Romance, Slice of Life, Supern...</td>\n",
        "      <td>TV</td>\n",
-       "      <td>24</td>\n",
-       "      <td>9</td>\n",
+       "      <td>24.000</td>\n",
+       "      <td>9.060</td>\n",
        "      <td>456749</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -522,8 +522,8 @@
        "      <td>Gintama</td>\n",
        "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
        "      <td>TV</td>\n",
-       "      <td>201</td>\n",
-       "      <td>9</td>\n",
+       "      <td>201.000</td>\n",
+       "      <td>9.040</td>\n",
        "      <td>336376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -532,8 +532,8 @@
        "      <td>Code Geass: Hangyaku no Lelouch R2</td>\n",
        "      <td>Action, Drama, Mecha, Military, Sci-Fi, Super ...</td>\n",
        "      <td>TV</td>\n",
-       "      <td>25</td>\n",
-       "      <td>9</td>\n",
+       "      <td>25.000</td>\n",
+       "      <td>8.980</td>\n",
        "      <td>572888</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -554,16 +554,16 @@
        "13      2904                 Code Geass: Hangyaku no Lelouch R2   \n",
        "\n",
        "                                                genre type  episodes  rating  \\\n",
-       "1   Action, Adventure, Drama, Fantasy, Magic, Mili...   TV        64       9   \n",
-       "2   Action, Comedy, Historical, Parody, Samurai, S...   TV        51       9   \n",
-       "3                                    Sci-Fi, Thriller   TV        24       9   \n",
-       "4   Action, Comedy, Historical, Parody, Samurai, S...   TV        51       9   \n",
-       "5              Comedy, Drama, School, Shounen, Sports   TV        10       9   \n",
-       "6             Action, Adventure, Shounen, Super Power   TV       148       9   \n",
-       "9   Action, Comedy, Historical, Parody, Samurai, S...   TV        13       9   \n",
-       "10  Drama, Fantasy, Romance, Slice of Life, Supern...   TV        24       9   \n",
-       "12  Action, Comedy, Historical, Parody, Samurai, S...   TV       201       9   \n",
-       "13  Action, Drama, Mecha, Military, Sci-Fi, Super ...   TV        25       9   \n",
+       "1   Action, Adventure, Drama, Fantasy, Magic, Mili...   TV    64.000   9.260   \n",
+       "2   Action, Comedy, Historical, Parody, Samurai, S...   TV    51.000   9.250   \n",
+       "3                                    Sci-Fi, Thriller   TV    24.000   9.170   \n",
+       "4   Action, Comedy, Historical, Parody, Samurai, S...   TV    51.000   9.160   \n",
+       "5              Comedy, Drama, School, Shounen, Sports   TV    10.000   9.150   \n",
+       "6             Action, Adventure, Shounen, Super Power   TV   148.000   9.130   \n",
+       "9   Action, Comedy, Historical, Parody, Samurai, S...   TV    13.000   9.110   \n",
+       "10  Drama, Fantasy, Romance, Slice of Life, Supern...   TV    24.000   9.060   \n",
+       "12  Action, Comedy, Historical, Parody, Samurai, S...   TV   201.000   9.040   \n",
+       "13  Action, Drama, Mecha, Military, Sci-Fi, Super ...   TV    25.000   8.980   \n",
        "\n",
        "    members  \n",
        "1    793665  \n",
@@ -578,7 +578,7 @@
        "13   572888  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
        "4        1       241      -1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
        "7813736    73516      8074       9"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
        "(7813737, 3)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
