--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "import seaborn as sns\n",
     "\n",
     "%matplotlib inline\n",
-    "pd.set_option('display.float_format', lambda x: '%.0f' % x)"
+    "pd.options.display.float_format = '{:,.3f}'.format"
    ]
   },
   {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -78,8 +78,8 @@
        "      <td>Fullmetal Alchemist: Brotherhood</td>\n",
        "      <td>Action, Adventure, Drama, Fantasy, Magic, Mili...</td>\n",
        "      <td>TV</td>\n",
-       "      <td>64</td>\n",
-       "      <td>9</td>\n",
+       "      <td>64.000</td>\n",
+       "      <td>9.260</td>\n",
        "      <td>793665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -88,8 +88,8 @@
        "      <td>Gintama°</td>\n",
        "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
        "      <td>TV</td>\n",
-       "      <td>51</td>\n",
-       "      <td>9</td>\n",
+       "      <td>51.000</td>\n",
+       "      <td>9.250</td>\n",
        "      <td>114262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -98,8 +98,8 @@
        "      <td>Steins;Gate</td>\n",
        "      <td>Sci-Fi, Thriller</td>\n",
        "      <td>TV</td>\n",
-       "      <td>24</td>\n",
-       "      <td>9</td>\n",
+       "      <td>24.000</td>\n",
+       "      <td>9.170</td>\n",
        "      <td>673572</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -108,8 +108,8 @@
        "      <td>Gintama&amp;#039;</td>\n",
        "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
        "      <td>TV</td>\n",
-       "      <td>51</td>\n",
-       "      <td>9</td>\n",
+       "      <td>51.000</td>\n",
+       "      <td>9.160</td>\n",
        "      <td>151266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -118,8 +118,8 @@
        "      <td>Haikyuu!!: Karasuno Koukou VS Shiratorizawa Ga...</td>\n",
        "      <td>Comedy, Drama, School, Shounen, Sports</td>\n",
        "      <td>TV</td>\n",
-       "      <td>10</td>\n",
-       "      <td>9</td>\n",
+       "      <td>10.000</td>\n",
+       "      <td>9.150</td>\n",
        "      <td>93351</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -135,11 +135,11 @@
        "4     32935  Haikyuu!!: Karasuno Koukou VS Shiratorizawa Ga...   \n",
        "\n",
        "                                               genre type  episodes  rating  \\\n",
-       "0  Action, Adventure, Drama, Fantasy, Magic, Mili...   TV        64       9   \n",
-       "1  Action, Comedy, Historical, Parody, Samurai, S...   TV        51       9   \n",
-       "2                                   Sci-Fi, Thriller   TV        24       9   \n",
-       "3  Action, Comedy, Historical, Parody, Samurai, S...   TV        51       9   \n",
-       "4             Comedy, Drama, School, Shounen, Sports   TV        10       9   \n",
+       "0  Action, Adventure, Drama, Fantasy, Magic, Mili...   TV    64.000   9.260   \n",
+       "1  Action, Comedy, Historical, Parody, Samurai, S...   TV    51.000   9.250   \n",
+       "2                                   Sci-Fi, Thriller   TV    24.000   9.170   \n",
+       "3  Action, Comedy, Historical, Parody, Samurai, S...   TV    51.000   9.160   \n",
+       "4             Comedy, Drama, School, Shounen, Sports   TV    10.000   9.150   \n",
        "\n",
        "   members  \n",
        "0   793665  \n",
@@ -149,7 +149,7 @@
        "4    93351  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -194,69 +194,69 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>3578</td>\n",
-       "      <td>3671</td>\n",
-       "      <td>3787</td>\n",
+       "      <td>3,578.000</td>\n",
+       "      <td>3,671.000</td>\n",
+       "      <td>3,787.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>36</td>\n",
-       "      <td>7</td>\n",
-       "      <td>42684</td>\n",
+       "      <td>35.916</td>\n",
+       "      <td>6.902</td>\n",
+       "      <td>42,683.658</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>81</td>\n",
-       "      <td>1</td>\n",
-       "      <td>89121</td>\n",
+       "      <td>80.640</td>\n",
+       "      <td>0.864</td>\n",
+       "      <td>89,121.009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>12</td>\n",
+       "      <td>2.000</td>\n",
+       "      <td>2.670</td>\n",
+       "      <td>12.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>12</td>\n",
-       "      <td>6</td>\n",
-       "      <td>483</td>\n",
+       "      <td>12.000</td>\n",
+       "      <td>6.440</td>\n",
+       "      <td>483.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>24</td>\n",
-       "      <td>7</td>\n",
-       "      <td>5947</td>\n",
+       "      <td>24.000</td>\n",
+       "      <td>6.940</td>\n",
+       "      <td>5,947.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>39</td>\n",
-       "      <td>7</td>\n",
-       "      <td>44246</td>\n",
+       "      <td>39.000</td>\n",
+       "      <td>7.460</td>\n",
+       "      <td>44,246.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>1818</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1013917</td>\n",
+       "      <td>1,818.000</td>\n",
+       "      <td>9.600</td>\n",
+       "      <td>1,013,917.000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       episodes  rating  members\n",
-       "count      3578    3671     3787\n",
-       "mean         36       7    42684\n",
-       "std          81       1    89121\n",
-       "min           2       3       12\n",
-       "25%          12       6      483\n",
-       "50%          24       7     5947\n",
-       "75%          39       7    44246\n",
-       "max        1818      10  1013917"
+       "       episodes    rating       members\n",
+       "count 3,578.000 3,671.000     3,787.000\n",
+       "mean     35.916     6.902    42,683.658\n",
+       "std      80.640     0.864    89,121.009\n",
+       "min       2.000     2.670        12.000\n",
+       "25%      12.000     6.440       483.000\n",
+       "50%      24.000     6.940     5,947.000\n",
+       "75%      39.000     7.460    44,246.000\n",
+       "max   1,818.000     9.600 1,013,917.000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -300,8 +300,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>mode</th>\n",
-       "      <td>12</td>\n",
-       "      <td>6</td>\n",
+       "      <td>12.000</td>\n",
+       "      <td>6.500</td>\n",
        "      <td>102</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -310,10 +310,10 @@
       ],
       "text/plain": [
        "      episodes  rating  members\n",
-       "mode        12       6      102"
+       "mode    12.000   6.500      102"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -584,65 +584,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Comedy: Mean 6.868, Median 6.920, Count 1828\n",
-      "\n",
-      "Action: Mean 7.107, Median 7.130, Count 1064\n",
-      "\n",
-      "Adventure: Mean 6.964, Median 6.950, Count 917\n",
-      "\n",
-      "Sci-Fi: Mean 6.981, Median 6.990, Count 757\n",
-      "\n",
-      "Fantasy: Mean 7.033, Median 7.065, Count 732\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def find_mean_median_rating(df, string):\n",
     "    # Create new dataframe that contains only the rows where the genre contains the given string and the ratings are not null\n",
     "    output_df = df[df[\"genre\"].str.contains(string, na=False) & ~np.isnan(df[\"rating\"])][\"rating\"]\n",
     "    return output_df.mean(), output_df.median(), output_df.count()\n",
-    "    \n",
+    "\n",
+    "dictionary = {}\n",
+    "\n",
     "top_5_genres = [\"Comedy\", \"Action\", \"Adventure\", \"Sci-Fi\", \"Fantasy\"]\n",
     "for genre in top_5_genres:\n",
     "    mean, median, count = find_mean_median_rating(anime_df, genre)\n",
-    "    print(f\"{genre}: Mean {mean:.3f}, Median {median:.3f}, Count {count}\\n\")"
+    "    dictionary[genre] = [round(mean, 3), round(median,3), count]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Thriller: Mean 7.886, Median 8.025, Count 34\n",
-      "\n",
-      "Josei: Mean 7.610, Median 7.600, Count 30\n",
-      "\n",
-      "Shoujo Ai: Mean 7.173, Median 7.185, Count 30\n",
-      "\n",
-      "Shounen Ai: Mean 7.192, Median 7.190, Count 23\n",
-      "\n",
-      "Dementia: Mean 7.207, Median 7.210, Count 7\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bottom_5_genres = [\"Thriller\", \"Josei\", \"Shoujo Ai\", \"Shounen Ai\", \"Dementia\"]\n",
     "for genre in bottom_5_genres:\n",
     "    mean, median, count = find_mean_median_rating(anime_df, genre)\n",
-    "    print(f\"{genre}: Mean {mean:.3f}, Median {median:.3f}, Count {count}\\n\")"
+    "    dictionary[genre] = [round(mean, 3), round(median,3), count]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Comedy': [6.868, 6.92, 1828],\n",
+       " 'Action': [7.107, 7.13, 1064],\n",
+       " 'Adventure': [6.964, 6.95, 917],\n",
+       " 'Sci-Fi': [6.981, 6.99, 757],\n",
+       " 'Fantasy': [7.033, 7.065, 732],\n",
+       " 'Thriller': [7.886, 8.025, 34],\n",
+       " 'Josei': [7.61, 7.6, 30],\n",
+       " 'Shoujo Ai': [7.173, 7.185, 30],\n",
+       " 'Shounen Ai': [7.192, 7.19, 23],\n",
+       " 'Dementia': [7.207, 7.21, 7]}"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mmc_df = pd.DataFrame.from_dict(dictionary, orient=\"index\", dtype=\"float\", columns=[\"Mean\", \"Median\", \"Count\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Comedy</th>\n",
+       "      <td>6.868</td>\n",
+       "      <td>6.920</td>\n",
+       "      <td>1,828.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Action</th>\n",
+       "      <td>7.107</td>\n",
+       "      <td>7.130</td>\n",
+       "      <td>1,064.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adventure</th>\n",
+       "      <td>6.964</td>\n",
+       "      <td>6.950</td>\n",
+       "      <td>917.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sci-Fi</th>\n",
+       "      <td>6.981</td>\n",
+       "      <td>6.990</td>\n",
+       "      <td>757.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fantasy</th>\n",
+       "      <td>7.033</td>\n",
+       "      <td>7.065</td>\n",
+       "      <td>732.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thriller</th>\n",
+       "      <td>7.886</td>\n",
+       "      <td>8.025</td>\n",
+       "      <td>34.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Josei</th>\n",
+       "      <td>7.610</td>\n",
+       "      <td>7.600</td>\n",
+       "      <td>30.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shoujo Ai</th>\n",
+       "      <td>7.173</td>\n",
+       "      <td>7.185</td>\n",
+       "      <td>30.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shounen Ai</th>\n",
+       "      <td>7.192</td>\n",
+       "      <td>7.190</td>\n",
+       "      <td>23.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dementia</th>\n",
+       "      <td>7.207</td>\n",
+       "      <td>7.210</td>\n",
+       "      <td>7.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Mean  Median     Count\n",
+       "Comedy     6.868   6.920 1,828.000\n",
+       "Action     7.107   7.130 1,064.000\n",
+       "Adventure  6.964   6.950   917.000\n",
+       "Sci-Fi     6.981   6.990   757.000\n",
+       "Fantasy    7.033   7.065   732.000\n",
+       "Thriller   7.886   8.025    34.000\n",
+       "Josei      7.610   7.600    30.000\n",
+       "Shoujo Ai  7.173   7.185    30.000\n",
+       "Shounen Ai 7.192   7.190    23.000\n",
+       "Dementia   7.207   7.210     7.000"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mmc_df"
    ]
   },
   {
