Finished mmc for the genres

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -583,6 +583,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now compare the mean and median ratings for the top 5 most common genres versus the 5 least common genres. First I create a function that outputs the mean and median ratings for a given genre in addition to how many animes are labeled as said genre."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -591,10 +598,32 @@
     "def find_mean_median_rating(df, string):\n",
     "    # Create new dataframe that contains only the rows where the genre contains the given string and the ratings are not null\n",
     "    output_df = df[df[\"genre\"].str.contains(string, na=False) & ~np.isnan(df[\"rating\"])][\"rating\"]\n",
-    "    return output_df.mean(), output_df.median(), output_df.count()\n",
-    "\n",
-    "dictionary = {}\n",
-    "\n",
+    "    return output_df.mean(), output_df.median(), output_df.count()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a dictionary to save the information\n",
+    "mmc_dict = {}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After that it's time to input the genres and create a dataframe of the values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "top_5_genres = [\"Comedy\", \"Action\", \"Adventure\", \"Sci-Fi\", \"Fantasy\"]\n",
     "for genre in top_5_genres:\n",
     "    mean, median, count = find_mean_median_rating(anime_df, genre)\n",
@@ -603,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,39 +644,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Comedy': [6.868, 6.92, 1828],\n",
-       " 'Action': [7.107, 7.13, 1064],\n",
-       " 'Adventure': [6.964, 6.95, 917],\n",
-       " 'Sci-Fi': [6.981, 6.99, 757],\n",
-       " 'Fantasy': [7.033, 7.065, 732],\n",
-       " 'Thriller': [7.886, 8.025, 34],\n",
-       " 'Josei': [7.61, 7.6, 30],\n",
-       " 'Shoujo Ai': [7.173, 7.185, 30],\n",
-       " 'Shounen Ai': [7.192, 7.19, 23],\n",
-       " 'Dementia': [7.207, 7.21, 7]}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dictionary"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert into a dataframe\n",
     "mmc_df = pd.DataFrame.from_dict(dictionary, orient=\"index\", dtype=\"float\", columns=[\"Mean\", \"Median\", \"Count\"])"
    ]
   },
@@ -771,8 +772,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'm going to plot the information as it is hard to compare the values in the dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -849,6 +857,13 @@
     "plt.xlabel(\"Genre\", size=12)\n",
     "plt.ylabel(\"Count\", size=12)\n",
     "plt.title(\"Number of Animes in the Top and Bottom 5 of Most Frequent Genres\", size=18);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at the bar graphs, it seems that all 10 of the genres have similar mean and median ratings of around 7 - 7.3 which is surprising as one may think the more popular anime genres who be rated higher. This may be due to the fact that Thriller, Josei, Shoujo Ai, Shounen Ai, and Dementia all have relatively tiny number of animes made and so the ratings may not reflect the true popularity of the genres."
    ]
   },
   {
