Started ratings dataset analysis

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,41 +620,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "top_5_genres = [\"Comedy\", \"Action\", \"Adventure\", \"Sci-Fi\", \"Fantasy\"]\n",
     "for genre in top_5_genres:\n",
     "    mean, median, count = find_mean_median_rating(anime_df, genre)\n",
-    "    dictionary[genre] = [round(mean, 3), round(median,3), count]"
+    "    mmc_dict[genre] = [round(mean, 3), round(median,3), count]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "bottom_5_genres = [\"Thriller\", \"Josei\", \"Shoujo Ai\", \"Shounen Ai\", \"Dementia\"]\n",
     "for genre in bottom_5_genres:\n",
     "    mean, median, count = find_mean_median_rating(anime_df, genre)\n",
-    "    dictionary[genre] = [round(mean, 3), round(median,3), count]"
+    "    mmc_dict[genre] = [round(mean, 3), round(median,3), count]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert into a dataframe\n",
-    "mmc_df = pd.DataFrame.from_dict(dictionary, orient=\"index\", dtype=\"float\", columns=[\"Mean\", \"Median\", \"Count\"])"
+    "mmc_df = pd.DataFrame.from_dict(mmc_dict, orient=\"index\", dtype=\"float\", columns=[\"Mean\", \"Median\", \"Count\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
        "Dementia   7.207   7.210     7.000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -864,6 +864,424 @@
    "metadata": {},
    "source": [
     "Looking at the bar graphs, it seems that all 10 of the genres have similar mean and median ratings of around 7 - 7.3 which is surprising as one may think the more popular anime genres who be rated higher. This may be due to the fact that Thriller, Josei, Shoujo Ai, Shounen Ai, and Dementia all have relatively tiny number of animes made and so the ratings may not reflect the true popularity of the genres."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ratings Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>79</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>226</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>241</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>355</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>356</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>442</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>487</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>846</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  anime_id  rating\n",
+       "0        1        20     nan\n",
+       "1        1        24     nan\n",
+       "2        1        79     nan\n",
+       "3        1       226     nan\n",
+       "4        1       241     nan\n",
+       "5        1       355     nan\n",
+       "6        1       356     nan\n",
+       "7        1       442     nan\n",
+       "8        1       487     nan\n",
+       "9        1       846     nan"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load rating dataset\n",
+    "rating_df = pd.read_csv(\"datasets/cleaned_rating.csv\")\n",
+    "rating_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df[rating_df[\"user_id\"]==1][\"rating\"].mean(skipna=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47    10.000\n",
+       "81    10.000\n",
+       "83    10.000\n",
+       "101   10.000\n",
+       "Name: rating, dtype: float64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df[rating_df[\"user_id\"]==1 & rating_df[\"rating\"].notnull()][\"rating\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.000</td>\n",
+       "      <td>10.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10.000</td>\n",
+       "      <td>10.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7.565</td>\n",
+       "      <td>7.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4.355</td>\n",
+       "      <td>5.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73512</th>\n",
+       "      <td>8.583</td>\n",
+       "      <td>8.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73513</th>\n",
+       "      <td>7.515</td>\n",
+       "      <td>8.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73514</th>\n",
+       "      <td>10.000</td>\n",
+       "      <td>10.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73515</th>\n",
+       "      <td>8.547</td>\n",
+       "      <td>9.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73516</th>\n",
+       "      <td>9.000</td>\n",
+       "      <td>9.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>73515 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          mean  median\n",
+       "user_id               \n",
+       "1       10.000  10.000\n",
+       "2       10.000  10.000\n",
+       "3        7.565   7.000\n",
+       "4          nan     nan\n",
+       "5        4.355   5.000\n",
+       "...        ...     ...\n",
+       "73512    8.583   8.500\n",
+       "73513    7.515   8.000\n",
+       "73514   10.000  10.000\n",
+       "73515    8.547   9.000\n",
+       "73516    9.000   9.000\n",
+       "\n",
+       "[73515 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df.groupby(\"user_id\")[\"rating\"].agg([\"mean\",\"median\"], drop_na=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.000</td>\n",
+       "      <td>10.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10.000</td>\n",
+       "      <td>10.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7.565</td>\n",
+       "      <td>7.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4.355</td>\n",
+       "      <td>5.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73512</th>\n",
+       "      <td>8.583</td>\n",
+       "      <td>8.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73513</th>\n",
+       "      <td>7.515</td>\n",
+       "      <td>8.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73514</th>\n",
+       "      <td>10.000</td>\n",
+       "      <td>10.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73515</th>\n",
+       "      <td>8.547</td>\n",
+       "      <td>9.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73516</th>\n",
+       "      <td>9.000</td>\n",
+       "      <td>9.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>73515 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          mean  median\n",
+       "user_id               \n",
+       "1       10.000  10.000\n",
+       "2       10.000  10.000\n",
+       "3        7.565   7.000\n",
+       "4          nan     nan\n",
+       "5        4.355   5.000\n",
+       "...        ...     ...\n",
+       "73512    8.583   8.500\n",
+       "73513    7.515   8.000\n",
+       "73514   10.000  10.000\n",
+       "73515    8.547   9.000\n",
+       "73516    9.000   9.000\n",
+       "\n",
+       "[73515 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df.groupby(\"user_id\")[\"rating\"].agg([\"mean\",\"median\"], skipna=False)"
    ]
   },
   {
