Did some basic exploration of the ratings data and also rewrote one of the questions to make more sense

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -9,7 +9,7 @@
     "- How are the numerical data distributed and are they any obvious correlations?\n",
     "- What genres are the most frequently made by anime studios?\n",
     "- How do the genres an anime is labelled as affect the ratings of the anime?\n",
-    "- How many people rate an anime instead of only watching it and what proportion rate animes? \n",
+    "- How many people has rated at least one anime instead of only watching it and what proportion rate animes?\n",
     "- For users that do rate animes, what is their average rating they give out?"
    ]
   },
@@ -1105,7 +1105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How many people rate an anime instead of only watching it and what proportion rate animes?\n",
+    "### How many people has rated at least one anime instead of only watching it and what proportion rate animes?\n",
     "To answer this, we need "
    ]
   },
