Answered one question of the ratings df

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -1106,47 +1106,65 @@
    "metadata": {},
    "source": [
     "### How many people has rated at least one anime instead of only watching it and what proportion rate animes?\n",
-    "To answer this, we need "
+    "To answer this, we need the total amount of users (based on \"user_id\") and the number of unique users that have rated an anime."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "73515"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of users: 73515\n"
+     ]
     }
    ],
    "source": [
-    "rating_df[\"user_id\"].nunique()"
+    "# Find total amount of users\n",
+    "total_num_users = rating_df[\"user_id\"].nunique()\n",
+    "print(f\"Total number of users: {total_num_users}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "69600"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of users who have rated before: 69600\n"
+     ]
     }
    ],
    "source": [
-    "rating_df[rating_df[\"rating\"].notnull()][\"user_id\"].nunique()"
+    "# Number of unique users that have rated an anime before\n",
+    "rated_before_users = rating_df[rating_df[\"rating\"].notnull()][\"user_id\"].nunique()\n",
+    "print(f\"Number of users who have rated before: {rated_before_users}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<fstring>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<fstring>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    (prop_rated.)\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Proportion of people who have rated at least one anime\n",
+    "prop_rated = rated_before_users/total_num_users * 100\n",
+    "print(f\"The proportion of people who have rated at least one anime on MyAnimeList is {prop_rated.:3f}\")"
    ]
   },
   {
