Modified the end a bit so that the recommendations stay in the order of the weighted averages

--- a/Content Based Filtering.ipynb
+++ b/Content Based Filtering.ipynb
@@ -4358,7 +4358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -4370,10 +4370,15 @@
        "1186     0.600629\n",
        "296      0.600629\n",
        "225      0.597484\n",
+       "1536     0.580189\n",
+       "11703    0.577044\n",
+       "7088     0.569182\n",
+       "6811     0.564465\n",
+       "249      0.564465\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4381,19 +4386,21 @@
    "source": [
     "# Sort in descending order\n",
     "recommendations = recommendation_series.sort_values(ascending=False)\n",
-    "recommendations.head()"
+    "recommendations.head(10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final recommendations (top 10):"
+    "## Final Result\n",
+    "After all that work creating the recommendation system, we now have the top 10 recommendations for \n",
+    "The final top 10 recommendations for user 4271:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -4419,73 +4426,83 @@
        "      <th></th>\n",
        "      <th>name</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>anime_id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>InuYasha: Kanketsu-hen</td>\n",
+       "      <th>231</th>\n",
+       "      <td>Asagiri no Miko</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>395</th>\n",
-       "      <td>InuYasha</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>800</th>\n",
-       "      <td>Busou Renkin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>947</th>\n",
+       "      <th>25157</th>\n",
        "      <td>Trinity Seven</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1285</th>\n",
-       "      <td>Ichiban Ushiro no Daimaou</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1598</th>\n",
-       "      <td>Code:Breaker</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1613</th>\n",
+       "      <th>1186</th>\n",
        "      <td>Battle Athletess Daiundoukai (TV)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1820</th>\n",
+       "      <th>296</th>\n",
        "      <td>Dragon Drive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2091</th>\n",
+       "      <th>225</th>\n",
        "      <td>Dragon Ball GT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2624</th>\n",
-       "      <td>Asagiri no Miko</td>\n",
+       "      <th>1536</th>\n",
+       "      <td>Busou Renkin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11703</th>\n",
+       "      <td>Code:Breaker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7088</th>\n",
+       "      <td>Ichiban Ushiro no Daimaou</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6811</th>\n",
+       "      <td>InuYasha: Kanketsu-hen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249</th>\n",
+       "      <td>InuYasha</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                   name\n",
-       "116              InuYasha: Kanketsu-hen\n",
-       "395                            InuYasha\n",
-       "800                        Busou Renkin\n",
-       "947                       Trinity Seven\n",
-       "1285          Ichiban Ushiro no Daimaou\n",
-       "1598                       Code:Breaker\n",
-       "1613  Battle Athletess Daiundoukai (TV)\n",
-       "1820                       Dragon Drive\n",
-       "2091                     Dragon Ball GT\n",
-       "2624                    Asagiri no Miko"
+       "                                       name\n",
+       "anime_id                                   \n",
+       "231                         Asagiri no Miko\n",
+       "25157                         Trinity Seven\n",
+       "1186      Battle Athletess Daiundoukai (TV)\n",
+       "296                            Dragon Drive\n",
+       "225                          Dragon Ball GT\n",
+       "1536                           Busou Renkin\n",
+       "11703                          Code:Breaker\n",
+       "7088              Ichiban Ushiro no Daimaou\n",
+       "6811                 InuYasha: Kanketsu-hen\n",
+       "249                                InuYasha"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "anime_df.loc[anime_df[\"anime_id\"].isin(recommendations.head(10).keys())][[\"name\"]]"
+    "# Find the top 10 animes in the recommendations in the anime dataset and put it in a new dataframe\n",
+    "recommendations_df = anime_df.loc[anime_df[\"anime_id\"].isin(recommendations.head(10).keys())]\n",
+    "# Set the index of the dataframe to the anime ids\n",
+    "recommendations_df.set_index(\"anime_id\", inplace=True)\n",
+    "# Use loc and the anime ids of the top 10 anime recommendations to preserve the order and output that to the user\n",
+    "recommendations_df.loc[recommendations.head(10).keys()][[\"name\"]]"
    ]
   }
  ],
